refactor: success done audio custom tag and on clicking download current audio and saving in cookies, feat: clear audios cookies, choising audio gender function

--- a/src/index.css
+++ b/src/index.css
@@ -58,4 +58,57 @@ progress::-moz-progress-bar {
 .three-dost {
   background-image: radial-gradient(circle, black 2px, transparent 2px);
   background-size: 100% 33.33%;
+  border-radius: 0.75rem !important;
+}
+
+/* Audio tag custom styles */
+audio {
+  padding: 0px !important;
+  height: 76px;
+  display: flex !important;
+  align-items: flex-start !important;
+}
+
+audio::-webkit-media-controls-panel {
+  height: 64px !important;
+  display: flex !important;
+  justify-content: space-between !important;
+}
+
+audio::-webkit-media-controls {
+  height: 76px !important;
+  display: flex !important;
+  justify-content: space-between !important;
+  gap: 0px !important;
+}
+
+audio::-webkit-media-controls-play-button {
+  border-radius: 100% !important;
+  justify-self: flex-start !important;
+}
+
+audio::-webkit-media-controls-timeline {
+  position: absolute;
+  width: 90%;
+  bottom: 2px;
+  left: -4px;
+}
+
+audio::-webkit-media-controls-current-time-display {
+  margin-right: -49px;
+}
+
+audio::-webkit-media-controls-mute-button {
+  display: none !important;
+}
+
+audio::-webkit-media-controls-volume-slider {
+  display: none !important;
+}
+
+audio::-webkit-media-controls-volume-control-container.closed {
+  display: none !important;
+}
+audio::-webkit-media-controls-volume-control-container {
+  display: none !important;
 }
