--- a/src/assets/styles/audio.css
+++ b/src/assets/styles/audio.css
@@ -1,136 +1,134 @@
 /* Audio tag custom styles */
 audio {
-    padding: 0px !important;
-    height: 80px;
-    display: flex !important;
-    align-items: flex-start !important;
-  }
-  
-  /* Audio button controls wrapper */
-  audio::-webkit-media-controls-panel {
-    height: 62px !important;
-    display: flex !important;
-    justify-content: space-between !important;
-    background: rgb(243 244 246 / 1) !important;
-    transition: 300ms;
-  }
-  audio:hover::-webkit-media-controls-panel {
-    background: rgb(249 250 251 / 1) !important;
-  }
-  html.dark audio::-webkit-media-controls-panel {
-    background: rgb(31 41 55 / 1) !important;
-  }
-  html.dark audio:hover::-webkit-media-controls-panel {
-    background: rgb(55 65 81 / 1) !important;
-  }
-  
-  /* Audio button controls */
-  audio::-webkit-media-controls {
-    height: 80px !important;
-    display: flex !important;
-    justify-content: space-between !important;
-    gap: 0px !important;
-  }
-  
-  /* Audio play button */
-  audio::-webkit-media-controls-play-button {
-    border-radius: 100% !important;
-    justify-self: flex-start !important;
-  }
-  
-  /* Audio mute button */
-  audio::-webkit-media-controls-timeline {
-    position: absolute;
-    width: 90%;
-    bottom: 6px;
-    left: -4px;
-  }
-  
-  audio::-webkit-media-controls-play-button, video::-webkit-media-controls-play-button {
-    -webkit-appearance: media-play-button;
-    display: flex;
-    flex: none;
-    border: none;
-    box-sizing: border-box;
-    width: 30px;
-    height: 30px;
-    line-height: 30px;
-    padding: 0;
-  }
-  
-  audio::-webkit-media-controls-timeline-container, video::-webkit-media-controls-timeline-container {
-    -webkit-appearance: media-controls-background;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-end;
-    flex: 1 1;
-    -webkit-user-select: none;
-    height: 16px;
-    min-width: 0;
-  }
-  
-  audio::-webkit-media-controls-current-time-display, video::-webkit-media-controls-current-time-display,
-  audio::-webkit-media-controls-time-remaining-display, video::-webkit-media-controls-time-remaining-display {
-    -webkit-appearance: media-current-time-display;
-    -webkit-user-select: none;
-    flex: none;
-    display: flex;
-    border: none;
-    cursor: default;
-    height: 30px;
-    margin: 0 9px 0 0;
-    padding: 0;
-    line-height: 30px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 13px;
-    font-weight: bold;
-    font-style: normal;
-    color: white;
-    letter-spacing: normal;
-    word-spacing: normal;
-    text-transform: none;
-    text-indent: 0;
-    text-shadow: none;
-    text-decoration: none;
-  }
-  
-  audio::-webkit-media-controls-timeline, video::-webkit-media-controls-timeline {
-    -webkit-appearance: media-slider;
-    height: 8px;
-    background-color: transparent;
-    min-width: 25px;
-  }
-  
-  /* Audio time display */
-  audio::-webkit-media-controls-current-time-display {
-    margin-right: -36px;
-    color: rgb(75 85 99 / 1) !important;
-  }
-  audio::-webkit-media-controls-time-remaining-display {
-    color: rgb(75 85 99 / 1) !important;
-  }
-  html.dark audio::-webkit-media-controls-current-time-display {
-    color: white !important;
-  }
-  html.dark audio::-webkit-media-controls-time-remaining-display {
-    color: white !important;
-  }
-  
-  /* Audio mute button */
-  audio::-webkit-media-controls-mute-button {
-    display: none !important;
-  }
-  
-  /* Audio volume buttons */
-  audio::-webkit-media-controls-volume-slider {
-    display: none !important;
-  }
-  
-  audio::-webkit-media-controls-volume-control-container.closed {
-    display: none !important;
-  }
-  audio::-webkit-media-controls-volume-control-container {
-    display: none !important;
-  }
-  
+  padding: 0px !important;
+  height: 80px;
+  display: flex !important;
+  align-items: flex-start !important;
+}
+
+/* Audio button controls wrapper */
+audio::-webkit-media-controls-panel {
+  height: 62px !important;
+  display: flex !important;
+  justify-content: space-between !important;
+  background: rgb(243 244 246 / 1) !important;
+  transition: 300ms;
+}
+audio:hover::-webkit-media-controls-panel {
+  background: rgb(249 250 251 / 1) !important;
+}
+html.dark audio::-webkit-media-controls-panel {
+  background: rgb(31 41 55 / 1) !important;
+}
+html.dark audio:hover::-webkit-media-controls-panel {
+  background: rgb(55 65 81 / 1) !important;
+}
+
+/* Audio button controls */
+audio::-webkit-media-controls {
+  height: 80px !important;
+  display: flex !important;
+  justify-content: space-between !important;
+  gap: 0px !important;
+}
+
+/* Audio play button */
+audio::-webkit-media-controls-play-button {
+  border-radius: 100% !important;
+  justify-self: flex-start !important;
+}
+
+/* Audio mute button */
+audio::-webkit-media-controls-timeline {
+  position: absolute;
+  width: 90%;
+  bottom: 6px;
+  left: -4px;
+}
+
+audio::-webkit-media-controls-play-button {
+  -webkit-appearance: media-play-button;
+  display: flex;
+  flex: none;
+  border: none;
+  box-sizing: border-box;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  padding: 0;
+}
+
+audio::-webkit-media-controls-timeline-container {
+  -webkit-appearance: media-controls-background;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
+  flex: 1 1;
+  -webkit-user-select: none;
+  height: 16px;
+  min-width: 0;
+}
+
+audio::-webkit-media-controls-current-time-display, 
+audio::-webkit-media-controls-time-remaining-display {
+  -webkit-appearance: media-current-time-display;
+  -webkit-user-select: none;
+  flex: none;
+  display: flex;
+  border: none;
+  cursor: default;
+  height: 30px;
+  margin: 0 9px 0 0;
+  padding: 0;
+  line-height: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 13px;
+  font-weight: bold;
+  font-style: normal;
+  color: white;
+  letter-spacing: normal;
+  word-spacing: normal;
+  text-transform: none;
+  text-indent: 0;
+  text-shadow: none;
+  text-decoration: none;
+}
+
+audio::-webkit-media-controls-timeline  {
+  height: 8px;
+  min-width: 25px;
+  background-color: transparent;
+}
+
+/* Audio time display */
+audio::-webkit-media-controls-current-time-display {
+  margin: 0px -34px 0px 20px;
+  color: rgb(75 85 99 / 1) !important;
+}
+audio::-webkit-media-controls-time-remaining-display {
+  color: rgb(75 85 99 / 1) !important;
+}
+html.dark audio::-webkit-media-controls-current-time-display {
+  color: white !important;
+}
+html.dark audio::-webkit-media-controls-time-remaining-display {
+  color: white !important;
+}
+
+/* Audio mute button */
+audio::-webkit-media-controls-mute-button {
+  display: none !important;
+}
+
+/* Audio volume buttons */
+audio::-webkit-media-controls-volume-slider {
+  display: none !important;
+}
+
+audio::-webkit-media-controls-volume-control-container.closed {
+  display: none !important;
+}
+audio::-webkit-media-controls-volume-control-container {
+  display: none !important;
+}
